--- a/API For Graphics Plotting/GraphPlotApiClientWPF/MainWindow.xaml
+++ b/API For Graphics Plotting/GraphPlotApiClientWPF/MainWindow.xaml
@@ -19,20 +19,32 @@
 
         <StackPanel Orientation="Vertical" Grid.Column="0" Margin="2 2 2 2">
             <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" FontSize="14" FontWeight="Bold"> Math Function</TextBlock>
-            <RadioButton HorizontalAlignment="Left" Margin="10,10,0,0" GroupName="Functions">Sin</RadioButton>
-            <RadioButton HorizontalAlignment="Left" Margin="10,10,0,0" GroupName="Functions">Cos</RadioButton>
-            <RadioButton HorizontalAlignment="Left" Margin="10,10,0,0" GroupName="Functions">Log</RadioButton>
-            <RadioButton HorizontalAlignment="Left" Margin="10,10,0,0" GroupName="Functions">Pow</RadioButton>
+            <RadioButton Name="SinRadioBt" HorizontalAlignment="Left" Margin="10,10,0,0" GroupName="FunctionsRadiobutton">Sin</RadioButton>
+            <RadioButton Name="CosRadioBt" HorizontalAlignment="Left" Margin="10,10,0,0" GroupName="FunctionsRadiobutton">Cos</RadioButton>
+            
+            <StackPanel Orientation="Horizontal" Grid.Column="0" >
+                <RadioButton Name="LogRadioBt" HorizontalAlignment="Left" Margin="10,10,0,0" GroupName="FunctionsRadiobutton">Log</RadioButton>
+                <TextBlock VerticalAlignment="Center" Margin="10,7,0,0">x </TextBlock>
+                <TextBox Name="LogX" VerticalAlignment="Center" Margin="5,7,0,0" Width="40" Height="18"></TextBox>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" Grid.Column="0" >
+                <RadioButton Name="PowRadioBt" HorizontalAlignment="Left" Margin="10,10,0,0" GroupName="FunctionsRadiobutton">Pow</RadioButton>
+                <TextBlock VerticalAlignment="Center" Margin="10,7,0,0" Height="18">x</TextBlock>
+                <TextBox Name="PowX" VerticalAlignment="Center" Margin="5,7,0,0" Width="20" Height="15"></TextBox>
+                <TextBlock VerticalAlignment="Center" Margin="5,7,0,0" Height="18">n</TextBlock>
+                <TextBox Name="PowN" VerticalAlignment="Center" Margin="5,7,0,0" Width="20" Height="15"></TextBox>
+            </StackPanel>
 
             <TextBlock HorizontalAlignment="Center" Margin="0,15,0,0" FontSize="14" FontWeight="Bold"> Parameters</TextBlock>
             <StackPanel Orientation="Horizontal" Grid.Column="0" Margin="2 2 2 2">
                 <TextBlock VerticalAlignment="Center" Margin="10,2,0,0">Amplitude -</TextBlock>
-                <TextBox VerticalAlignment="Center" Margin="5,2,0,0" Width="50"></TextBox>
+                <TextBox Name="AmplitudeTexXox" VerticalAlignment="Center" Margin="5,2,0,0" Width="50"></TextBox>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" Grid.Column="0" Margin="2 2 2 2">
                 <TextBlock VerticalAlignment="Center" Margin="10,2,0,0">Frequency -</TextBlock>
-                <TextBox VerticalAlignment="Center" Margin="5,2,0,0" Width="50"></TextBox>
+                <TextBox Name="FrequencyTextBox" VerticalAlignment="Center" Margin="5,2,0,0" Width="50"></TextBox>
             </StackPanel>
 
         </StackPanel>
