--- a/BetRayerChatTCP.v1.1/WpfClient(CallBack)/MainWindow.xaml
+++ b/BetRayerChatTCP.v1.1/WpfClient(CallBack)/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Border  BorderBrush="Black" BorderThickness="2">
         <Grid>
             <Grid.Background>
-                <ImageBrush ImageSource="C:\Users\Tigran PC\Desktop\1.jpg"/>
+                <ImageBrush ImageSource="C:\Users\Tigran PC\Source\Repos\ASP.NET_WEB_API-_MVC_WPF\BetRayerChatTCP.v1.1\1.jpg"/>
             </Grid.Background>
 
             <Grid.RowDefinitions>
@@ -21,6 +21,7 @@
                 <TextBlock  Margin="5 5 5 5" Padding="3" FontSize="13" FontWeight="Bold" >Name</TextBlock>
                 <TextBox Background="#FFFFDEF6" Name ="txtUserName"  Margin="5, 5" Padding="3" Width="150"></TextBox>
                 <Button Background="#FFF065A4"  Name ="Bt_LogIn" Margin="5,5,5,0" Padding="3" FontSize="13" Height="24" VerticalAlignment="Top" Click="Bt_LogIn_Click"  >LogIn</Button>
+                <TextBlock Name="status" Margin="15 5 5 5" Padding="3" FontSize="13" FontWeight="Bold" ></TextBlock>
             </StackPanel>
 
             <Border Grid.Row="1"  BorderBrush="Black" BorderThickness="2">
@@ -39,7 +40,7 @@
                     </Border>
                     <StackPanel Grid.Column="1" Margin="5" Orientation="Vertical">
                         <Border BorderBrush="Black" BorderThickness="1,1,1,1">
-                            <TextBlock Name="rtbMessages" AllowDrop="True" ForceCursor="False" TextWrapping="Wrap" Width="300" HorizontalAlignment="Left" Height="200" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                            <TextBlock Name="rtbMessages" AllowDrop="True" ForceCursor="False" TextWrapping="Wrap" Width="300" HorizontalAlignment="Left" Height="200" ScrollViewer.CanContentScroll="True" Background="{x:Null}" FontWeight="Bold" FontSize="13"/>
                         </Border>
                         <StackPanel Margin="0 5 5 5" Grid.Column="1" Orientation="Horizontal">
                             <TextBox Background="#FFFFE5F9"  Name="messageTextbox" TextWrapping="Wrap" Height="50" Width="250"></TextBox>
