--- a/BetRayerChatTCP.v1.1/WpfClient(CallBack)/MainWindow.xaml
+++ b/BetRayerChatTCP.v1.1/WpfClient(CallBack)/MainWindow.xaml
@@ -19,8 +19,8 @@
 
             <StackPanel Grid.Row="0" Margin="3" Orientation="Horizontal" >
                 <TextBlock  Margin="5 5 5 5" Padding="3" FontSize="13" FontWeight="Bold" >Name</TextBlock>
-                <TextBox Background="#FFFFDEF6" Name ="txtUserName"  Margin="5, 5" Padding="3" Width="150"></TextBox>
-                <Button Background="#FFF065A4"  Name ="Bt_LogIn" Margin="5,5,5,0" Padding="3" FontSize="13" Height="24" VerticalAlignment="Top" Click="Bt_LogIn_Click"  >LogIn</Button>
+                <TextBox Background="White" Name ="txtUserName"  Margin="5, 5" Padding="3" Width="150"></TextBox>
+                <Button Background="#FF85CB11"  Name ="Bt_LogIn" Margin="5,5,5,0" Padding="3" Height="24" Click="Bt_LogIn_Click" VerticalAlignment="Top"  >LogIn</Button>
                 <TextBlock Name="status" Margin="15 5 5 5" Padding="3" FontSize="13" FontWeight="Bold" ></TextBlock>
             </StackPanel>
 
@@ -43,8 +43,8 @@
                             <TextBlock Name="rtbMessages" AllowDrop="True" ForceCursor="False" TextWrapping="Wrap" Width="300" HorizontalAlignment="Left" Height="200" ScrollViewer.CanContentScroll="True" Background="{x:Null}" FontWeight="Bold" FontSize="13"/>
                         </Border>
                         <StackPanel Margin="0 5 5 5" Grid.Column="1" Orientation="Horizontal">
-                            <TextBox Background="#FFFFE5F9"  Name="messageTextbox" TextWrapping="Wrap" Height="50" Width="250"></TextBox>
-                            <Button Background="#FFF065A4" Name ="Bt_Send" Margin="5" Padding="3" FontSize="13" VerticalAlignment="Center" Click="Bt_Send_Click" Width="50" Height="50"  >Send</Button>
+                            <TextBox Background="White"  Name="messageTextbox" TextWrapping="Wrap" Height="50" Width="250"></TextBox>
+                            <Button Background="#FF85CB11" Name ="Bt_Send" Margin="5" Padding="3" FontSize="13" VerticalAlignment="Center" Click="Bt_Send_Click" Width="50" Height="50"  >Send</Button>
                         </StackPanel>
                     </StackPanel>
                 </Grid>
