--- a/BetRayerChatTCP.v1.1/WpfClient(CallBack)/MainWindow.xaml
+++ b/BetRayerChatTCP.v1.1/WpfClient(CallBack)/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfClient_CallBack_"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="460">
+        Title="MainWindow" Height="350" Width="460" Closing="ClosingEvent">
     <Border  BorderBrush="Black" BorderThickness="2">
         <Grid>
             <!-- <Grid.Background>
