--- a/BetRayerChatTCP.v1.1/WpfClient(CallBack)/MainWindow.xaml
+++ b/BetRayerChatTCP.v1.1/WpfClient(CallBack)/MainWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfClient_CallBack_"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="460" Closing="ClosingEvent">
+        Title="MainWindow" Height="350" Width="600" Closing="ClosingEvent">
     <Border  BorderBrush="Black" BorderThickness="2">
         <Grid>
-            <!-- <Grid.Background>
+            <Grid.Background>
                 <ImageBrush ImageSource="C:\Users\Tigran PC\Source\Repos\ASP.NET_WEB_API-_MVC_WPF\BetRayerChatTCP.v1.1\1.jpg"/>
-            </Grid.Background>-->
+            </Grid.Background>
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="40" />
@@ -18,16 +18,17 @@
             </Grid.RowDefinitions>
 
             <StackPanel Grid.Row="0" Margin="3" Orientation="Horizontal" >
+                <TextBlock  Margin="0 0  5 0" Padding="6" FontSize="16" FontWeight="Bold" Background="White" FontFamily="Showcard Gothic" Foreground="#FF17B7F1" RenderTransformOrigin="0.5,0.5" TextDecorations="{x:Null}" TextAlignment="Justify" >BetraYer Chat</TextBlock>
                 <TextBlock  Margin="5 5 5 5" Padding="3" FontSize="13" FontWeight="Bold" >Name</TextBlock>
                 <TextBox Background="White" Name ="txtUserName"  Margin="5, 5" Padding="3" Width="150"></TextBox>
                 <Button Background="#FF85CB11"  Name ="Bt_LogIn" Margin="5,5,5,0" Padding="3" Height="24" Click="Bt_LogIn_Click" VerticalAlignment="Top"  >LogIn</Button>
-                <TextBlock Name="status" Margin="15 5 5 5" Padding="3" FontSize="13" FontWeight="Bold" ></TextBlock>
+                <TextBlock Name="status" Margin="15 5 5 5" Padding="3" FontSize="13" FontWeight="Bold" >Disconnected</TextBlock>
             </StackPanel>
 
             <Border Grid.Row="1"  BorderBrush="Black" BorderThickness="2">
                 <Grid Grid.Row ="1">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="136*"/>
+                        <ColumnDefinition Width="122*"/>
                         <ColumnDefinition Width="367*" />
                     </Grid.ColumnDefinitions>
 
@@ -39,12 +40,13 @@
                         </StackPanel>
                     </Border>
                     <StackPanel Grid.Column="1" Margin="5" Orientation="Vertical">
-                        <Border BorderBrush="Black" BorderThickness="1,1,1,1">
+                        <Border BorderBrush="Black" BorderThickness="1,1,1,1" CornerRadius="15">
                             <TextBlock Name="rtbMessages" AllowDrop="True" ForceCursor="False" TextWrapping="Wrap" Width="300" HorizontalAlignment="Left" Height="200" ScrollViewer.CanContentScroll="True" Background="{x:Null}" FontWeight="Bold" FontSize="13"/>
                         </Border>
-                        <StackPanel Margin="0 5 5 5" Grid.Column="1" Orientation="Horizontal">
-                            <TextBox Background="White"  Name="messageTextbox" TextWrapping="Wrap" Height="50" Width="250"></TextBox>
-                            <Button Background="#FF85CB11" Name ="Bt_Send" Margin="5" Padding="3" FontSize="13" VerticalAlignment="Center" Click="Bt_Send_Click" Width="50" Height="50"  >Send</Button>
+                        
+                        <StackPanel Margin="0 5 5 5" Grid.Column="1" Orientation="Horizontal" >
+                                <TextBox Background="White"  Name="messageTextbox" TextWrapping="Wrap" Height="50" Width="250"></TextBox>
+                            <Button Background="#FF85CB11" Name ="Bt_Send"  Margin="5" Padding="3" FontSize="13" VerticalAlignment="Center" Click="Bt_Send_Click" Width="50" Height="50"  >Send</Button>
                         </StackPanel>
                     </StackPanel>
                 </Grid>
