--- a/BetRayerChatTCP.v1.1/WpfClient(CallBack)/PrivateMessWindow.xaml
+++ b/BetRayerChatTCP.v1.1/WpfClient(CallBack)/PrivateMessWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfClient_CallBack_"
         mc:Ignorable="d"
-        Title="PrivateMessWindow" Height="400" Width="300">
+        Title="PrivateMessWindow" Height="400" Width="300" Closing="ClosingEvent">
     <Border  BorderBrush="Black" BorderThickness="2">
         <Grid>
             <Grid.Background>
