--- a/BetRayerChatTCP.v1.1/WCF_WPF_ServiceTCP/MainWindow.xaml
+++ b/BetRayerChatTCP.v1.1/WCF_WPF_ServiceTCP/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WCF_WPF_ServiceTCP"
         mc:Ignorable="d"
-        Title="MainWindow" Height="300" Width="250">
+        Title="MainWindow" Height="150" Width="300">
     <Grid>
 
         <Grid.Background>
@@ -16,11 +16,13 @@
             </LinearGradientBrush>
         </Grid.Background>
 
-        <Button Height="23" Width="82" Margin="0,0,15,88" VerticalAlignment="Bottom" HorizontalAlignment="Center" x:Name="buttonStop" Click="buttonStop_Click">Stop</Button>
-        <Button Height="23" Width="82" Margin="0,96,15,0" VerticalAlignment="Top" HorizontalAlignment="Center" x:Name="buttonStart" Click="buttonStart_Click">Start</Button>
+        <StackPanel Orientation="Vertical">
+            <Label Height="37" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Top" x:Name="labelTitle"  FontSize="20" >Chat Service</Label>
+            <Button Height="30" Width="80" Margin="5"  HorizontalAlignment="Center" x:Name="buttonStart" Click="buttonStart_Click" Background="#FF52C332" FontWeight="Bold" FontSize="14">START</Button>
+            <Label Height="28" Margin="10,0,15,45" VerticalAlignment="Bottom" x:Name="labelStatus">Status</Label>
+        </StackPanel>
 
-        <Label Height="28" Margin="10,0,15,45" VerticalAlignment="Bottom" x:Name="labelStatus">Status</Label>
-        <Label Height="37" Margin="10,18,15,0" HorizontalAlignment="Center" VerticalAlignment="Top" x:Name="labelTitle"  FontSize="20" >Chat Service</Label>
+
 
     </Grid>
 </Window>
